--- a/graph_template.html
+++ b/graph_template.html
@@ -214,11 +214,11 @@ function onHover(event, d) {
       <strong>${artist.name}</strong><br>
       ${artist.role ? `<div><span style='color: #4C4646;'>${artist.role}</span></div>` : ''}
       <img src="${artist.photo}" alt="photo"><br>
-      ${artist.country ? `<div><span style='color: #6A50FF;'>${artist.country}</span></div>` : ''}
+      ${artist.country ? `<div><span style='color: #4C4646;'>${artist.country}</span></div>` : ''}
 
-      ${artist.department ? `<div><span style='color: var(--popup-text);'>styles:</span> <span style='color: #4C4646;'>${artist.department}</span></div>` : ''}
-      ${artist.discipline ? `<div><span style='color: var(--popup-text);'>tools:</span> <span style='color: #4C4646;'>${artist.discipline}</span></div>` : ''}
-      ${artist.instruments ? `<div><span style='color: var(--popup-text);'>level:</span> <span style='color: #4C4646;'>${artist.instruments}</span></div>` : ''}
+      ${artist.department ? `<div><span style='color: var(--popup-text);'>department:</span> <span style='color: #6A50FF;'>${artist.department}</span></div>` : ''}
+      ${artist.discipline ? `<div><span style='color: var(--popup-text);'>disciplines:</span> <span style='color: #6A50FF;'>${artist.discipline}</span></div>` : ''}
+      ${artist.instruments ? `<div><span style='color: var(--popup-text);'>instruments:</span> <span style='color: #6A50FF;'>${artist.instruments}</span></div>` : ''}
 
 `;
 
